[package]
name = "clara"
version = "0.1.0"
edition = "2021"
authors = ["Clara Bot Team"]
description = "An AI-powered Twitter bot that transforms user avatars into cute cat illustrations with stories"
license = "MIT"

[dependencies]
# Core Framework
rig = { git = "https://github.com/0xPlaygrounds/rig", branch = "main", features = ["full"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error Handling
thiserror = "1.0"

# Time and Date
chrono = { version = "0.4", features = ["serde"] }

# Environment Variables
dotenv = "0.15"

# Base64 Encoding/Decoding
base64 = "0.21"

# Random Number Generation
rand = "0.8"

# URL Parsing
url = "2.4"

# Templating
handlebars = "4.3"

# Async Traits
async-trait = "0.1"

# OAuth Authentication
oauth2 = "4.4"

# WebSocket Support
tokio-tungstenite = "0.20"

# JSON Web Tokens
jsonwebtoken = "9.1"

[dev-dependencies]
# Testing
mockito = "1.2"
wiremock = "0.5"
tokio-test = "0.4"
pretty_assertions = "1.3"

[features]
default = ["full"]
full = []
minimal = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    ".",
]
