[package]
name = "clara"
version = "0.1.0"
edition = "2021"
authors = ["Clara Bot Team"]
description = "An AI-powered Twitter bot that transforms user avatars into cute cat illustrations with stories"
license = "MIT"

[dependencies]
# Rig Framework
rig = { git = "https://github.com/0xPlaygrounds/rig" }

# Async Runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# API and Data Handling
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and Error Handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# Utilities
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
oauth2 = "4.4"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
